--- a/chirLine/pom.xml
+++ b/chirLine/pom.xml
@@ -142,8 +142,40 @@
                     <version>3.0</version>  
                     <failOnMissingWebXml>false</failOnMissingWebXml>  
                 </configuration>  
-            </plugin>  
+            </plugin> 
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <port>8080</port>
+                    <path>/chirLine</path>
+                    <uriEncoding>UTF-8</uriEncoding>
+                </configuration>
+            </plugin>
         </plugins>
     <finalName>chirLine</finalName>
+     <!--  
+    这样也可以把所有的xml文件，打包到相应位置。  -->
+    <resources>  
+        <resource>  
+            <directory>src/main/resources</directory>  
+            <includes>  
+                <include>**/*.properties</include>  
+                <include>**/*.xml</include>  
+                <include>**/*.tld</include>  
+            </includes>  
+            <filtering>false</filtering>  
+        </resource>  
+        <resource>  
+            <directory>src/main/java</directory>  
+            <includes>  
+                <include>**/*.properties</include>  
+                <include>**/*.xml</include>  
+                <include>**/*.tld</include>  
+            </includes>  
+            <filtering>false</filtering>  
+        </resource>  
+    </resources>  
   </build>
 </project>
